refactor: rafactor server configurator

--- a/datacenter-project/#src/components/base/_calculator-configurator.html
+++ b/datacenter-project/#src/components/base/_calculator-configurator.html
@@ -3,30 +3,24 @@
                     <div class="configurator__content">
                         <h3 class="configurator__title">Конфигуратор выделенного сервера</h3>
                         <div class="cpu">
-                            <p class="cpu__title">Модель сервера и процессора</p>
+                            <p class="configurator__subtitle">Модель сервера и процессора</p>
                             <div class="cpu__select"></div>
                         </div>
                         <div class="ram">
-                            <div class="ram__container">
-
-                            </div>
+                            <div class="ram__container"></div>
                         </div>
                         <div class="horizontal-line"></div>
                         <div class="hdd">
-                            <div class="hdd__container">
-
-                            </div>
+                            <div class="hdd__container"></div>
                             <button class="button button_outline button-show-more"><span>+ добавить еще диски</span></button>
                         </div>
                     </div>
                     <div class="configurator__result">
-                        <h3 class="configurator__title">Итоговая конфигурация</h3>
-                        <div class="result__server">
-
-                        </div>
+                        <h3 class="configurator__title configurator__title_light">Итоговая конфигурация</h3>
+                        <div class="result__server"> </div>
                         <div class="horizontal-line"></div>
-                        <div class="server-price"></div>
-                        <a id="bucket-btn" class="button button_colored" target="_blank">
+                        <div class="result__cost"></div>
+                        <a class="button button_colored result__btn" target="_blank">
                             <span>Добавить в корзину</span></a>
                     </div>
            </div>
