feat: add all rent server's pages

--- a/datacenter-project/#src/components/services/colo/_colo.html
+++ b/datacenter-project/#src/components/services/colo/_colo.html
@@ -27,10 +27,7 @@
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
-                        <p class="service__text">Для успешной работы крупной и активно развивающейся компании
-                            предлагаем предоставление в аренду серверной стойки (шкафа).
-                            Наш дата-центр соответствует требованиям, предъявляемым к хостинговым площадкам
-                            стандартом PCI DSS 2.0</p>
+                        <p class="service__text">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость размещения сервера. Со списком Вы можете ознакомиться ниже.</p>
                         @@include('_additional-services.html')
                     </div>
                 </div>
