--- a/datacenter-project/#src/components/services/dedic/_dedic.html
+++ b/datacenter-project/#src/components/services/dedic/_dedic.html
@@ -14,119 +14,14 @@
     </p>
     <p class="service__text">Если вы не нашли подходящую для вас конфигурацию, сообщите нам и мы создадим персональное
         решение – Custom Dedicated – оптимальное именно для вас. Для этого оставьте заявку.</p>
-    <div class="table">
-        <div class="table__body table__body_dedicated table__body_loading">
-            @@include('../../base/_calculator-configurator.html')
-        </div>
-        <!--        <div class="btn-services">-->
-        <!--            <div class="order-info">-->
-        <!--                <p>Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.-->
-        <!--                </p>-->
-        <!--            </div>-->
-        <!--        </div>-->
-    </div>
+    @@include("_dedic-table.html")
+    <p class="service__text service__text_mb">Аренда выделенного сервера в ЦОД "Датахата" в Минске (Беларусь) позволит Вам в большей мере сосредоточиться на развитии бизнес-проекта, а не на вопросах приобретения серверного оборудования, программного обеспечения, подбора специалистов или поиска помещений, соответствующих техническим требованиям. Стоимость аренды сервера в дата-центре сочетает в себе выгодную цену, широкий спектр предоставляемых услуг, отличную производительность и, что немаловажно, безопасность.</p>
+    <p class="service__text service__text_mb">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость аренды. Со списком Вы можете ознакомиться ниже.</p>
+    @@include("../colo/_additional-services.html")
+    <p class="service__text service__text_mb">Безопасность – это важнейшая компонента для многих бизнесов. Поэтому клиенты с услугой Dedicated server могут самостоятельно устанавливать, настраивать и контролировать такие решения безопасности, как брандмауэры и специальные приложения защиты данных своих клиентов.</p>
+    <p class="service__text service__text_mb">С услугой Dedicated клиент приобретает возможность использования всех мощностей арендованного сервера. Это очень важно для больших интернет-проектов со значительным онлайн-траффиком. Размещая ресурс на отдельном выделенном сервере, бизнес получает гарантию, что сайт будет работать быстро и без перебоев. А это играет важную роль для пользовательского опыта его клиентов. Наш центр обработки данных входит в список лучших компаний Беларуси, обеспечивающих практически 100% доступность серверов.</p>
+    <p class="service__text service__text_mb">Еще одной важной особенностью Dedicated server является предоставление провайдером возможности самостоятельного выбора и настройки нужных операционных систем, приложений, скриптов и установления других программ, необходимых для работы сайта.</p>
 
-    <!--    <div class="info-services">-->
-    <!--        <p>В абонентскую плату включено:</p>-->
-    <!--        <ul>-->
-    <!--            <li>Автоматическая установка и переустановка ОС (Centos 6/7, Debian 7/8, Ubuntu,-->
-    <!--                FreeBSD, Windows);-->
-    <!--            </li>-->
-    <!--            <li>Автоматическая загрузка образа восстановления системы по сети;</li>-->
-    <!--            <li>Подключение к каналу связи на скорости 1 Gb/s;</li>-->
-    <!--            <li>IP KVM, доступный вам постоянно через VPN-соединение;</li>-->
-    <!--            <li>Гарантированное электропитание;</li>-->
-    <!--            <li>Круглосуточная техническая поддержка;</li>-->
-    <!--            <li>Предоставление одного IP-адреса;</li>-->
-    <!--            <li>Бесплатный белорусский трафик;</li>-->
-    <!--            <li>1 Tb исходящего и 1 Tb входящего внешнего трафика. В случае превышения-->
-    <!--                предоплаченного трафика стоимость следующего входящего 1 Gb составит 0,05 рублей,-->
-    <!--                исходящего 1 Gb составит 0,1 рублей.-->
-    <!--            </li>-->
-    <!--        </ul>-->
-    <!--    </div>-->
-    <!--    <div class="additional-services">-->
-    <!--        <div class="services-table dedic-additional">-->
-    <!--            <div class="table-head">-->
-    <!--                <p>Наименование продукта</p>-->
-    <!--                <p>Стоимость BYN с НДС, в месяц</p>-->
-    <!--            </div>-->
-    <!--            <div class="table-body">-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный порт 1 Gb/s</p>-->
-    <!--                    <p>12,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный порт 10 Gb/s</p>-->
-    <!--                    <p>135,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный адрес IPv4</p>-->
-    <!--                    <p>10,20</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный адрес IPv6 (/64)</p>-->
-    <!--                    <p>Бесплатно</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный 1 Gb внешнего входящего трафика</p>-->
-    <!--                    <p>0,05</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Дополнительный 1 Gb внешнего исходящего трафика</p>-->
-    <!--                    <p>0,10</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Трафик внутри Республики Беларусь (BY-IX)</p>-->
-    <!--                    <p>Бесплатно</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Порт 10 Mb/s без учета трафика</p>-->
-    <!--                    <p>135,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Порт 100 Mb/s без учета трафика</p>-->
-    <!--                    <p>553,80</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Порт 1000 Mb/s без учета трафика</p>-->
-    <!--                    <p>По запросу</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Сеть IP/24</p>-->
-    <!--                    <p>180,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Полка для размещения сервера без салазок (единоразово)</p>-->
-    <!--                    <p>60,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Администрирование (1 чел.-час)</p>-->
-    <!--                    <p>70,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Регистрация в БелГИЭ (единоразово)</p>-->
-    <!--                    <p>0,5 базовой величины</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Канал БФТ (1 мес.)</p>-->
-    <!--                    <p>45,00</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Локальное соединение "x-connect"</p>-->
-    <!--                    <p>1,26 * L</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Прокладка оптоволоконного патч-корда (LC SM или ММ duplex), длиной L метров-->
-    <!--                        (единоразово)</p>-->
-    <!--                    <p>54,00 + 6,48 * L</p>-->
-    <!--                </div>-->
-    <!--                <div class="table-body-item">-->
-    <!--                    <p>Переходники (n - количество), шт. (единоразово)</p>-->
-    <!--                    <p>32,40 * n</p>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
+
 </div>
 
