feat: disabled button when data load in table

--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -63,6 +63,7 @@
 
   &_disabled{
     background: $color-light-grey;
+    pointer-events: none;
 
     &>*{
       @include font-style($size: 1.6rem);
