fix: change color disabled text in btn

--- a/datacenter-project/#src/scss/abstarct/variable.scss
+++ b/datacenter-project/#src/scss/abstarct/variable.scss
@@ -1,8 +1,9 @@
 $color-primary: #3e77bb;
 $color-secondary:  #172433;
 $color-light-grey: #f8f8f8;
-$color-light: #ffffff;
-$color-dark: #000000;
+$color-light: #fff;
+$color-dark: #000;
+$color-disabled: rgba(0, 0, 0, 0.34);
 $color-gradient-primary: #ea5c2f;
 $color-gradient-secondary: #f3b921;
 $color-gradient-layer1: #1f78e0;
