feat: add rent rack page

--- a/datacenter-project/#src/components/services/colo/_additional-services.html
+++ b/datacenter-project/#src/components/services/colo/_additional-services.html
@@ -1,4 +1,4 @@
-
+  <div class="services__additional">
     <div class="table">
         <div class="table__head">
             <p>Наименование продукта</p>
@@ -80,4 +80,4 @@
             </div>
         </div>
     </div>
-
+  </div>
