--- a/datacenter-project/#src/scss/base/table.scss
+++ b/datacenter-project/#src/scss/base/table.scss
@@ -12,20 +12,20 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  @include font-style($size: 2rem, $weight: 700);
+  @include font($size: 2rem, $weight: 700);
   border-radius: 1.4rem 1.4rem 0 0;
   background-color: $color-light-grey;
 
   @media (max-width: 1024px) {
-    @include font-style($size: 1.6rem, $weight: 700);
+    @include font($size: 1.6rem, $weight: 700);
   }
   @media (max-width: 768px) {
-    @include font-style($size: 1.4rem, $weight: 700);
+    @include font($size: 1.4rem, $weight: 700);
 
   }
 
   @media (max-width: 420px) {
-    @include font-style($size: 1.2rem, $weight: 700);
+    @include font($size: 1.2rem, $weight: 700);
   }
 
   @media (max-width: 420px) {
@@ -62,10 +62,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  @include font-style($size: 1.6rem, $weight: 400);
+  @include font($size: 1.6rem, $weight: 400);
 
   @media (max-width: 768px) {
-    @include font-style($size: 1.4rem, $weight: 400);
+    @include font($size: 1.4rem, $weight: 400);
   }
 
   & > p{
@@ -94,7 +94,7 @@
   flex-basis: 33%;
   @media (max-width: 480px) {
     padding: 1rem;
-    @include font-style($size: 1.2rem, $weight: 400);
+    @include font($size: 1.2rem, $weight: 400);
   }
 }
 
