--- a/datacenter-project/#src/scss/components/company/details/details.scss
+++ b/datacenter-project/#src/scss/components/company/details/details.scss
@@ -28,18 +28,18 @@
 
   & > p {
     margin-bottom: 0.3rem;
-    @include font-style($size: 2rem, $weight: 400);
+    @include font($size: 2rem, $weight: 400);
 
     @media (max-width: 420px) {
-      @include font-style($size: 1.4rem, $weight: 400)
+      @include font($size: 1.4rem, $weight: 400)
     }
   }
 
   & > p > span {
-    @include font-style($size: 1.8rem, $weight: 700);
+    @include font($size: 1.8rem, $weight: 700);
 
     @media (max-width: 420px) {
-      @include font-style($size: 1.6rem, $weight: 700);
+      @include font($size: 1.6rem, $weight: 700);
     }
 
   }
