--- a/datacenter-project/#src/scss/abstarct/mixins.scss
+++ b/datacenter-project/#src/scss/abstarct/mixins.scss
@@ -1,4 +1,4 @@
-@mixin font($font_name, $file_name, $weight, $style) {
+@mixin font-style($font_name, $file_name, $weight, $style) {
   @font-face {
     font-family: $font_name;
     font-display: swap;
@@ -8,7 +8,7 @@
   }
 }
 
-@mixin font-style($style: normal, $weight: 700, $size, $height: 120%){
+@mixin font($style: normal, $weight: 700, $size, $height: 120%){
   font-style: $style;
   font-weight: $weight;
   font-size: $size;
@@ -71,6 +71,15 @@
 @mixin hover {
   @media (hover:hover) {
     @content;
+  }
+}
+
+@mixin columns ($width) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  >* {
+    flex-basis: $width;
   }
 }
 
