--- a/datacenter-project/#src/scss/base/base.scss
+++ b/datacenter-project/#src/scss/base/base.scss
@@ -16,38 +16,38 @@ body.active-body {
 }
 
 h1 {
-  @include font-style($size: 4.6rem);
+  @include font($size: 4.6rem);
 
   @media (max-width: 1024px) and (min-width: 421px) {
-    @include font-style($size: 3rem);
+    @include font($size: 3rem);
   }
 
   @media (max-width: 420px) {
-    @include font-style($size: 2.4rem);
+    @include font($size: 2.4rem);
   }
 
 }
 
 h2 {
-  @include font-style($size: 4.6rem);
+  @include font($size: 4.6rem);
 
   @media (max-width: 768px) {
-    @include font-style($size: 3rem);
+    @include font($size: 3rem);
   }
 }
 
 h3 {
-  @include font-style($size: 3rem);
+  @include font($size: 3rem);
   @media (max-width: 768px) {
-    @include font-style($size: 2.4rem);
+    @include font($size: 2.4rem);
   }
 }
 
 h4 {
-  @include font-style($size: 2.4rem);
+  @include font($size: 2.4rem);
 
   @media (max-width: 420px) {
-    @include font-style($size: 2rem)
+    @include font($size: 2rem)
   }
 }
 
