--- a/datacenter-project/#src/scss/base/buttons.scss
+++ b/datacenter-project/#src/scss/base/buttons.scss
@@ -12,7 +12,7 @@
 
     span {
       @extend %gradient-text;
-      @include font-style($size: 1.6rem);
+      @include font($size: 1.6rem);
     }
 
   }
@@ -25,7 +25,7 @@
 
     span {
       @extend %gradient-text;
-      @include font-style($size: 1.6rem);
+      @include font($size: 1.6rem);
 
 
       @include hover{
@@ -55,7 +55,7 @@
     @include gradient;
 
     &>*{
-      @include font-style($size: 1.6rem);
+      @include font($size: 1.6rem);
       color: $color-light;
     }
   }
@@ -66,7 +66,7 @@
     pointer-events: none;
 
     &>*{
-      @include font-style($size: 1.6rem);
+      @include font($size: 1.6rem);
       color: $color-disabled;
     }
   }
@@ -87,7 +87,7 @@
     box-shadow: inset 0 0 0 100vw $color-light;
     span {
       @extend %gradient-text;
-      @include font-style($size: 1.6rem);
+      @include font($size: 1.6rem);
 
     }
   }
