--- a/datacenter-project/#src/scss/base/header-navigation.scss
+++ b/datacenter-project/#src/scss/base/header-navigation.scss
@@ -35,10 +35,10 @@
 .navigation__menu {
   color: $color-dark;
   cursor: pointer;
-  @include font-style($size: 1.6rem, $weight: 400);
+  @include font($size: 1.6rem, $weight: 400);
 
   @media (max-width: 1200px) {
-    @include font-style($size: 1.4rem, $weight: 400);
+    @include font($size: 1.4rem, $weight: 400);
   }
 
   @include hover {
