--- a/datacenter-project/#src/scss/components/main/advantages.scss
+++ b/datacenter-project/#src/scss/components/main/advantages.scss
@@ -109,27 +109,27 @@
 
         .advantage__title {
             margin-top: 2.5rem;
-            @include font-style($size: 2.4rem);
+            @include font($size: 2.4rem);
             font-size: 2.4rem;
             color: $color-light;
             text-align: center;
 
             @media (max-width: 420px) {
                 margin-top: 1.3rem;
-                @include font-style($size: 1.8rem);
+                @include font($size: 1.8rem);
                 text-align: left;
             }
         }
 
         .advantage__text {
             margin-top: 1.7rem;
-            @include font-style($size: 1.6rem, $height: 160%, $weight: 400);
+            @include font($size: 1.6rem, $height: 160%, $weight: 400);
             color: $color-light;
             text-align: center;
 
             @media (max-width: 420px) {
                 margin-top: 0.8rem;
-                @include font-style($size: 1.4rem, $height: 160%, $weight: 400);
+                @include font($size: 1.4rem, $height: 160%, $weight: 400);
                 text-align: left;
             }
         }
