--- a/datacenter-project/#src/scss/components/main/promo.scss
+++ b/datacenter-project/#src/scss/components/main/promo.scss
@@ -23,14 +23,14 @@
 }
 
 .promo__title {
-  @include font-style($size: 9rem);
+  @include font($size: 9rem);
 
   @media (max-width: 1024px) and (min-width: 769px) {
-    @include font-style($size: 4rem);
+    @include font($size: 4rem);
   }
 
   @media (max-width: 768px) {
-    @include font-style($size: 3.6rem);
+    @include font($size: 3.6rem);
   }
 
 }
@@ -60,11 +60,11 @@
 
 .promo__subtitle {
   color: $color-light;
-  @include font-style($size: 2rem, $height: 160%);
+  @include font($size: 2rem, $height: 160%);
   text-align: center;
 
   @media (max-width: 420px) {
-    @include font-style($size: 1.6rem, $height: 160%);
+    @include font($size: 1.6rem, $height: 160%);
 
   }
 }
