--- a/datacenter-project/#src/scss/components/services/services.scss
+++ b/datacenter-project/#src/scss/components/services/services.scss
@@ -52,18 +52,18 @@
     margin-top: 1rem;
   }
 
-  @include font-style($size: 1.8rem, $height: 160%, $weight: 400);
+  @include font($size: 1.8rem, $height: 160%, $weight: 400);
   text-align: justify;
 
   @media (max-width: 1024px) {
-    @include font-style($size: 1.6rem, $height: 160%, $weight: 400);
+    @include font($size: 1.6rem, $height: 160%, $weight: 400);
     &_bold {
       font-weight: 700;
     }
   }
 
   @media (max-width: 768px) {
-    @include font-style($size: 1.4rem, $height: 160%, $weight: 400);
+    @include font($size: 1.4rem, $height: 160%, $weight: 400);
     &_bold {
       font-weight: 700;
     }
@@ -110,9 +110,9 @@ a {
 }
 
 .service__info {
-  @include font-style($size: 1.8rem, $weight: 400);
+  @include font($size: 1.8rem, $weight: 400);
   @media (max-width: 1024px) {
-    @include font-style($size: 1.4rem, $weight: 400);
+    @include font($size: 1.4rem, $weight: 400);
   }
 
   @media (max-width: 420px) {
@@ -125,10 +125,10 @@ a {
 
 
   p {
-    @include font-style($size: 2rem, $weight: 700);
+    @include font($size: 2rem, $weight: 700);
 
     @media (max-width: 1024px) {
-      @include font-style($size: 1.6rem, $weight: 700);
+      @include font($size: 1.6rem, $weight: 700);
 
     }
   }
